# srikok-git

./: .gitignore  BUILD_FROM_SCRATCH.html  BUILD_FROM_SCRATCH.md  BUILD_WINDOWS.md  CMakeLists.txt  INSTALL_UBUNTU.md  README.md  build-windows.bat  build-windows.ps1  deploy-windows.bat  deploy-windows.ps1
src/: branchmanager.cpp  branchmanager.h  commithistory.cpp  commithistory.h  diffviewer.cpp  diffviewer.h  gitmanager.cpp  gitmanager.h  main.cpp  mainwindow.cpp  mainwindow.h  remotemanager.cpp  remotemanager.h  repositorybrowser.cpp  repositorybrowser.h  settings.cpp  settings.h  stagingarea.cpp  stagingarea.h
